2006-02-14  01:09 Andrej Kacian <andrej@kacian.sk>
	* src/feed.c
		Fixed check for presence of fetched feed.
	* configure.ac
		Add cvsXX suffix to version.

2006-02-13  23:43 Andrej Kacian <andrej@kacian.sk>
	* src/feed.c
		Remove temporary file with fetched feed when preliminary XML processing
		fails in rssyl_fetch_feed().

2006-02-13  19:08 Colin Leroy <colin@colino.net>
	* src/feed.c
		Specify charset in HTML headers

2006-02-12  21:43 Colin Leroy <colin@colino.net>
	* src/rssyl_gtk.c
		Check for mainwin before using it

2006-02-12  18:30 Andrej Kacian <andrej@kacian.sk>
	* src/feed.c
		304 response code is enough to determine that the source was indeed not
		modified.

2006-02-12  09:08 wwp <subscript@free.fr>
	* src/feed.c
		Added missing LF to a debug message.

2006-02-11  18:43 Colin Leroy <colin@colino.net>
	* src/feed.c
		Prevent possible double-free

2006-02-11  00:43 Andrej Kacian <andrej@kacian.sk>
	* src/feed.c
		Improved debug output for feed fetching

2006-02-10  20:29 Colin Leroy <colin@colino.net>
	* src/rssyl_cb_gtk.c
		respect prefs_common.work_offline in automatic update

2006-01-22  20:55 Andrej Kacian <andrej@kacian.sk>
	* configure.ac
		src: feed.[ch], parsers.c: Added --enable-debug to configure, which
			makes fetched feeds be stored on disk, and adds X-RSSyl-Fetched header
			to each new or changed feed. This should help in debugging of false
			duplicates.
	* src/rssyl_cb_menu.c: Don't add "http://" to the Add dialog.

2006-01-16  10:10 Paul Mangan <claws@thewildbeast.co.uk>

	* src/rssyl_gtk.c
		fix display markup in label

2006-01-15  21:37 Andrej Kacian <andrej@kacian.sk>
	* src/feed.c
		src/rssyl_cb_menu.c
		src/rssyl_gtk.c
		HIGify some dialogs (patch by Colin Leroy)

2006-01-14  21:08 Colin Leroy <colin@colino.net>
	* src/plugin.c
	  configure.ac
		Fix error messages
		Check for SC 1.9.100cvs140 (.subscribe)

2006-01-12  21:08 Colin Leroy <colin@colino.net>
	* src/feed.[ch]
	* src/feedprops.[ch]
	* src/rssyl.c