@@ -4,7 +4,7 @@ AC_CONFIG_AUX_DIR(config)
 AM_MAINTAINER_MODE
 AC_CONFIG_HEADERS(config.h)
 
-PLUGINVERSION=0.3cvs1
+PLUGINVERSION=0.3cvs2
 AM_INIT_AUTOMAKE(rssyl, $PLUGINVERSION, no-define)
 AC_SUBST(PLUGINVERSION)
 
